Thêm comment vào các lệnh

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li><a class="menu-list " href="#">THỂ THAO</a></li>
                             <li><a class="menu-list " href="#">ĐỒ LÓT</a></li>
                             <li><a class="menu-list " href="#">PHỤ KIỆN</a></li>
-                            <li><a class="menu-list " href="#">IN LOGO</a></li>
+                            <li><a class="menu-list " href="#">IN LOGO</a></li><a href=""></a>
                         </ul>
                     </div>
                     <div class="col-md-3 col-12">
@@ -76,7 +76,7 @@
                     <div class="col-md-2 col-12">
                         <div class="row right-menu">
                             <a href="#" class="menu-list" >GIỎ HÀNG</a>
-                            <a href="#" class="menu-list" >ĐĂNG NHẬP</a>
+                            <a href="#" class="menu-list" ><a href="quan-tri/index (1).html">ĐĂNG NHẬP</a></a>
                         </div>
                     </div>
                 </div>
@@ -107,18 +107,19 @@
                         </div>
                     </div>
 
-                    <div class="row card-style">
-                        <div class="col-md-3 col-sm-6 col-6">
-                            <div class="card">
-                                <a href="#">
-                                    <a href="chiTietSanPham.html"><img src="img/hot-thang/hot-thang-1.avif" class="card-img-top" alt="..."></a>
-                                    <div class="card-body">
+                    <!--Sản phẩm đầu tiên trong danh mục sản phẩm bán chạy-->
+                    <div class="row card-style"><!--Dòng sản phẩm-->
+                        <div class="col-md-3 col-sm-6 col-6"><!--Nếu màn hình là máy tính thì hiển thị 4 sản phẩm trên một hàng, còn trên điện thoại hoặc nhỏ hơn là 2 sản phẩm trên một hàng-->
+                            <div class="card"><!--Thẻ chứa nội dung sản phẩm-->
+                                <a href="">
+                                    <a href="chiTietSanPham.html"><img src="img/hot-thang/hot-thang-1.avif" class="card-img-top" alt="..."></a><!--Ảnh sản phẩm-->
+                                    <div class="card-body"><!--phần thân của thẻ-->
                                         <a href="chiTietSanPham.html">
-                                            <h4>Áo Sơ Mi Extra Fine Cotton Ngắn Tay</h4>
-                                            <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
+                                            <h4>Áo Sơ Mi Extra Fine Cotton Ngắn Tay</h4><!--Tên sản phẩm-->
+                                            <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);"><!--Size sản phẩm-->
                                                 M X XL XXL
                                             </div>
-                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div>
+                                            <div style="color: rgb(255, 47, 0);">489.000 VND</div><!--Giá tiền sản phẩm-->
                                         </a>
                                     </div>
                                 </a>
